# SFT-blueprint

./: .gitignore  README.md  pyproject.toml  requirements.txt  train_sft.py
blueprints/: sft_blueprint_template.py
configs/accelerate/: deepspeed_zero2.yaml  deepspeed_zero3.yaml
configs/sft/: README.md  base.yaml
data/qwen_small/: train_messages.jsonl  val_messages.jsonl
docs/: blueprint_parameter_design.md  blueprint_usage_guide.md  deepspeed_zero.md  flash_attention.md  loss_mask.md
src/sft/: args.py  callbacks.py  cli.py  data.py  eval.py  formatting.py  model.py  trainer.py  utils.py
tests/: test_blueprint_template.py  test_sft_modes.py  test_sft_smoke.py
tests/fixtures/: train_messages.jsonl  val_messages.jsonl
