[project]
name = "sft-blueprint-scaffold"
version = "0.1.0"
description = "Minimal SFT pipeline intended for Magnus blueprint jobs."
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.46.0",
  "datasets>=2.21.0",
  "trl>=0.10.1",
  "peft>=0.12.0",
  "accelerate>=0.34.0",
  "PyYAML>=6.0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
